# magic-scanner

./: .gitignore  Cargo.toml  README.md
fingerprint/: fingerprint.json
src/: main.rs
src/args/: mod.rs
src/fingerprint/: mod.rs
src/scanner/: mod.rs  ping.rs  socket.rs
src/utils/: address.rs  mod.rs  port.rs
