[package]
name = "magic-scanner"
version = "0.1.0"
edition = "2021"


[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
tokio = {version = "1.25", features = ["full"]}
colorful = "0.2.2"
colored = "2.0.0"
trust-dns-resolver = {version="0.22.0", features = ["dns-over-rustls"]}
regex = "1.7.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
pnet = "0.33"
ipnet = { version = "2", features = ["serde"] }
socket2 = "0.5.1"
cidr-utils = "0.5.10"
clap = {version="4.1.8", features = ["derive"]}
futures = "0.3.26"
itertools = "0.10.5"
rand = "0.8.5"
rayon = "1.7"
indicatif = "0.17.3"